# connect-farmer

./: .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 87dcd322b5a9_create_user_table.py  e740b9d6ff16_fix_table_model_to_crop.py  f700e2fc3a5f_added_vendor_table.py
api/: crops.py  farm_api.py  farmer.py  user.py
backend/: .gitignore  README.md  main.py  req.txt
backend/api/: crops.py  farmer.py  user.py  vendor.py
backend/authentication/: auth.py
backend/db/data/db/: db.py
backend/models/: crops.py  farmer.py  user.py  vendor.py
backend/tables/: base.py  crops.py  farmer.py  user.py  vendor.py
frontend/farm_fe/: package-lock.json  package.json
frontend/farm_fe/src/app/: page.js
frontend/farm_fe/src/app/buyers/: page.js
frontend/farm_fe/src/app/checkout/: page.js
frontend/farm_fe/src/app/crops/: page.js
frontend/farm_fe/src/app/farmers/: page.js
frontend/farm_fe/src/app/header/: page.js
frontend/farm_fe/src/app/homepage/: page.js
frontend/farm_fe/src/app/landing/: page.js
frontend/farm_fe/src/app/signup/: page.js
frontend/farm_fe/src/app/users/: page.js
frontend/farm_fe/src/app/wishlist/: page.js
models/: crops.py  farm.py  farmer.py  user.py
tables/: crops.py  user.py
